@@ -2,6 +2,13 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*buildkernel-b3-1.0.3 (12 Feb 2015)
+
+  12 Feb 2015; sakaki <sakaki@deciban.com> -buildkernel-b3-1.0.1.ebuild,
+  -buildkernel-b3-1.0.2.ebuild, +buildkernel-b3-1.0.3.ebuild:
+  Bump to version 1.0.3; delete old.
+  Small fix in manpage for underlying.
+
 *buildkernel-b3-1.0.2 (10 Feb 2015)
 
   10 Feb 2015; sakaki <sakaki@deciban.com> -buildkernel-b3-1.0.0.ebuild,
